apps/gateway/versions/1.0--1.0/manifests/k8s01-lb01-gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: k8s01-lb01
spec:
  gatewayClassName: cilium
  infrastructure:
    annotations:
      load-balancer.hetzner.cloud/location: "nbg1"
      load-balancer.hetzner.cloud/name: "k8s01-lb01"
      load-balancer.hetzner.cloud/uses-proxyprotocol: "true"
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
    - name: https-lette
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: cert-lette
      allowedRoutes:
        namespaces:
          from: All
    - name: https-oana
      hostname: oana.asdf.ooo
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: cert-oana-asdf
      allowedRoutes:
        namespaces:
          from: All
    - name: https-matomo
      hostname: matomo.asdf.ooo
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: cert-matomo-asdf
      allowedRoutes:
        namespaces:
          from: All
    - name: https-kimai
      hostname: kimai.asdf.ooo
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: cert-kimai-asdf
      allowedRoutes:
        namespaces:
          from: All
    - name: https-echoip
      hostname: ip.asdf.ooo
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: cert-echoip-asdf
      allowedRoutes:
        namespaces:
          from: All
    - name: https-pkl
      hostname: www.parkourluzern.ch
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: cert-pkl
      allowedRoutes:
        namespaces:
          from: All
    - name: https-tanja-courselit
      hostname: kurse.tanjabicker.ch
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: cert-tanja-courselit
      allowedRoutes:
        namespaces:
          from: All
