apps/gateway/versions/1.0--1.0/manifests/http-redirect-all.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: k8s01-lb01-http-redirect-all
spec:
  parentRefs:
    - name: k8s01-lb01
      sectionName: http
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
